# coda

./: .env.example  .gitignore  Dockerfile.app  Dockerfile.inference  Dockerfile.kg  README.md  docker-compose.yml  docker_startup.sh  pyproject.toml  startup.sh
.github/workflows/: docker_build.yml
kg/: .gitattributes
src/coda/: cli.py  runtime_config.py
src/coda/app/: __main__.py  server.py
src/coda/app/templates/: index.html
src/coda/dialogue/: __init__.py  whisper.py
src/coda/grounding/: build_grounding_db.py  gilda_grounder.py
src/coda/grounding/rag_grounder/: README.md  __init__.py  config.py  extractor.py  grounder.py  neo4j.py  pipeline.py  reranker.py  retrieval_term.py  retriever.py  types.py
src/coda/grounding/rag_grounder/core/: __init__.py  extractor.py  pipeline.py  reranker.py  retriever.py  schemas.py  utils.py
src/coda/grounding/rag_grounder/grounder_config/: icd10_config.yaml  icd11_config.yaml
src/coda/grounding/rag_grounder/ontology_adapters/: __init__.py  icd10.py
src/coda/grounding/rag_grounder/prompt_configs/: README.md  extractor_default.yaml  extractor_medcoder.yaml  reranker_default.yaml
src/coda/grounding/rag_grounder/prompts/: extractor_default_general.yaml  extractor_medcoder.yaml  reranker_default.yaml
src/coda/grounding/rag_grounder/setup/: __init__.py  generate_index.py  setup.py
src/coda/inference/: __init__.py  agent.py  champs_llm_agent.py
src/coda/kg/: build.py  embed_nodes.py  processor_util.py  reports.py  vector_index.py
src/coda/kg/sources/: __init__.py  acme.py  hpo.py  icd10.py  icd11.py  mesh.py  mondo.py  phmrc.py  probbase.py  wdi.py  who_mortality.py  who_va.py
src/coda/llm_api/: ollama_adapter.py
tests/: test_cli.py  test_cod_agent.py  test_inference_package.py  test_ollama_adapter.py  test_runtime_config.py  test_startup_sh.py
