[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coda"
dynamic = ["version"]
description = "Cause of Death Determination Assistant"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Benjamin M. Gyori, Northeastern University", email = "b.gyori@northeastern.edu"}
]
keywords = ["coda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "gilda>=1.6.0",
    "requests",
    "obonet",
    "networkx",
    "pandas",
    "pystow",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "openai-whisper>=20231117",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
kg_build = [
    "openpyxl",
    "xlrd",
    "indra",
    "openacme[embeddings] @ git+https://github.com/gyorilab/openacme.git",
]

[project.urls]
Homepage = "https://github.com/codaproject/coda"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"coda.app" = ["templates/*.html"]
"coda.resources" = ["*.csv", "*.tsv", "*.json", "champs/*.txt", "champs/*.tsv"]

[tool.setuptools.dynamic]
version = {attr = "coda.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
